Streamlined the QML loading for KCM

- QML path mangling no uses the same variable as CMakeLists
- If the setup is broken, the user will get a nice message
- Fixed crash on non-existent root object

BUG:356832